--- a/styles/style.css
+++ b/styles/style.css
@@ -35,14 +35,13 @@ body {
 /* 메인 */
 .main{
   background: lightgreen;
-  height: 50vh;
-  padding: 0 15px;
-  display: flow-root;
-}
+  min-height: 450px;
+  padding: 30px;
 
-.group {
-  margin: 0 15px;
-  float: left;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .group1 {
