--- a/styles/style.css
+++ b/styles/style.css
@@ -67,9 +67,15 @@ body {
 /* 푸터 */
 .footer{
   background: gray;
+  width: 940px;
+  margin: 0 auto;
 }
 
 .footer-inner {
   background-color: silver;
   height: 15vh;
+
+  position: relative;
+  top: -10px;
+  left: -10px;
 }
