--- a/styles/style.css
+++ b/styles/style.css
@@ -8,9 +8,17 @@
   box-sizing: border-box;
 }
 
+/* 링크 스타일 */
+a {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
 /* 본문 스타일 */
 body {
-  background: #ffc;
+  background: #ccc;
+  color: #222;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
 
