--- a/styles/style.css
+++ b/styles/style.css
@@ -44,21 +44,32 @@ body {
 
 /* 텍스트 링크 모음 */
 .member {
-  /* background-color: aqua; */
   padding: 4px 0;
   text-align: right;
+
+  /* position 속성을 활용하여 .member 영역을 오른쪽으로 10px만큼 이동 */
+  /* position: relative;
+  right: -10px; */
+
+  /* transform 속성을 활용하여 .member 영역을 오른쪽으로 10px만큼 이동 */
+  transform: translateX(10px);
 }
 
 .member li {
-  /* background-color: pink; */
+  /* background-color: pink; */ 
   display: inline-block;
 }
 
 .member a {
-  background-color: coral;
   padding: 6px 10px;
   display: inherit;
+  text-transform: uppercase;
 }
+
+/* 마지막 li 요소에 포함된 a 태그를 선택하여 오른쪽 padding 값 조절 */
+/* .member li:last-child a {
+  padding-right: 0;
+} */
 
 .divider {
   margin-right: 4px;
@@ -105,15 +116,12 @@ body {
 /* 푸터 */
 .footer{
   background: gray;
-  width: 940px;
+  width: 100vw;
+  height: 15vh;
   margin: 0 auto;
 }
 
 .footer-inner {
   background-color: silver;
   height: 15vh;
-
-  position: relative;
-  top: -10px;
-  left: -10px;
 }
