--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 10px;
+}
+
 /* 링크 스타일 */
 a {
   color: inherit;
@@ -18,6 +22,11 @@ body {
   background: #ccc;
   color: #222;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
+  font-size: 1.4rem;
+
+  /* em / rem 단위 */
+  /* em : 부모 요소로부터 상속받은 값을 기준으로 계산
+  rem : root를 기준으로 계산 */
 }
 
 /* 레이아웃 */
