--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,16 @@
 @import url(./normalize.css);
 @import url(./reset.css);
 
+/* 숨김 콘텐츠 */
+.a11y-hidden {
+  background-color: yellow;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: inset(50%);
+}
 
 /* 기본 스타일 */
 *, *::before, *::after {
@@ -19,7 +29,7 @@ a {
 
 /* 본문 스타일 */
 body {
-  background: #ccc;
+  background: #ccc linear-gradient(to bottom, #ccc 0%, #eee 35%, #efefef 60%, #fff 60%, #fff 100%);
   color: #222;
   font-family: "Pretendard Variable", Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
   font-size: 1.4rem;
@@ -38,7 +48,6 @@ body {
 /* 헤더 */
 .header{
   background: #fff;
-  height: 15vh;
   padding: 0 30px;
   border-radius: 0 0 15px 15px;
   position: relative;
@@ -84,6 +93,43 @@ body {
   margin-right: 4px;
 }
 
+/* 메인 메뉴 */
+.navigation {
+  padding-bottom: 80px;
+}
+
+.menu {
+  background: #e85e2c
+  linear-gradient(to bottom, #ef9126 0%, #e85e2c 35%, #e85e2c 70%, #ef9126 100%);
+  border-top: 2px solid #222;
+  border-radius: 0 0 5px 5px;
+  padding-left: 230px;
+  height: 47px; /* border 2px 포함한 값 */
+}
+
+.menu-item {
+  float: left;
+}
+
+.menu-button {
+  background-color: transparent;
+  border: 0;
+  border-left: 2px solid #fff;
+  padding: 0 23px;
+
+  color: #fff;
+  font-size: 15px;
+  font-weight: 700;
+  line-height: 45px;
+  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.sub-menu {
+  background-color: pink;
+  position: absolute;
+  /* display: none; */
+}
+
 /* 비주얼 */
 .visual{
   background: orange;
@@ -94,7 +140,7 @@ body {
 .main{
   background: lightgreen;
   min-height: 450px;
-  padding: 30px;
+  padding: 0 30px;
 
   display: flex;
   flex-flow: row nowrap;
