--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 @import url(./normalize.css);
 @import url(./reset.css);
 
+
 /* 숨김 콘텐츠 */
 .a11y-hidden {
   background-color: yellow;
@@ -58,6 +59,7 @@ body {
   position: absolute;
   top: 45px;
   left: 60px;
+  z-index: 5;
 }
 
 /* 텍스트 링크 모음 */
@@ -105,29 +107,67 @@ body {
   border-radius: 0 0 5px 5px;
   padding-left: 230px;
   height: 47px; /* border 2px 포함한 값 */
+
+  position: relative;
 }
+
+.menu > li:nth-child(-n+3) {
+  position: relative;
+} 
 
 .menu-item {
   float: left;
+  border-left: 2px solid #fff;
 }
 
 .menu-button {
-  background-color: transparent;
+  background: transparent;
   border: 0;
-  border-left: 2px solid #fff;
   padding: 0 23px;
 
   color: #fff;
   font-size: 15px;
   font-weight: 700;
   line-height: 45px;
-  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.5);
+  text-shadow: -1px -1px 2px rgba(0, 0, 0, 0.6);
+}
+
+.is-active .menu-button {
+  color: #ff0;
+}
+
+.is-active .menu-button::after {
+  content: "";
+  background-color: #222;
+  height: 2px;
+  display: block;
 }
 
 .sub-menu {
   background-color: pink;
   position: absolute;
-  /* display: none; */
+  top: 47px;
+  display: none;
+}
+
+.menu-html, .menu-css, .menu-standards {
+  left: 0;
+}
+
+.menu-accessibility, .menu-qna, .menu-archive {
+  right: 0;
+}
+
+.is-active .sub-menu {
+  display: block;
+  white-space: nowrap;
+}
+
+.sub-menu li {
+  background-color: gold;
+  display: inline-block;
+  padding-left: 1em;
+
 }
 
 /* 비주얼 */
