--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,6 @@
 @import url(./normalize.css);
 @import url(./reset.css);
+@import url(./fontello.css);
 
 
 /* 숨김 콘텐츠 */
@@ -166,8 +167,29 @@ body {
 .sub-menu li {
   background-color: gold;
   display: inline-block;
-  padding-left: 1em;
+}
 
+.sub-menu a::before {
+  content: "\e803";
+  font-family: 'fontello';
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1em;
+  margin-left: .2em;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.sub-menu a:hover::before, .sub-menu a:focus::before {
+  content: "\e801";
 }
 
 /* 비주얼 */
