--- a/styles/style.css
+++ b/styles/style.css
@@ -195,6 +195,7 @@ body {
 
 /* 비주얼 */
 /* @ at sign rule : 무엇을 정의하거나 선언하는 것 */
+
 @keyframes moveEffect {
   0% {
     color: rgba(0, 0, 0, 0);
@@ -208,18 +209,53 @@ body {
   }
 }
 
+@keyframes fadeEffect {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 .visual {
-  /* background: pink; */
   height: 120px;
+  position: relative;
+}
+
+.visual::before, .visual::after {
+  width: 100%;
+  height: 100%;
+
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  animation: fadeEffect 2s infinite linear alternate;
+}
+
+.visual::before {
+  background-image: url(./images/ani_flower_01.png), url(./images/ani_flower_02.png);
+  background-repeat: no-repeat;
+  background-position: 0 -12px, 600px 0;
+}
+
+.visual::after {
+  background-image: url(./images/ani_flower_03.png), url(./images/ani_flower_04.png);
+  background-repeat: no-repeat;
+  background-position: 300px 0, 800px 2px;
+
+  animation-delay: 2s;
 }
 
 .visual-text {
   display: inline-block;
-  /* background-color: coral; */
   font-family: Georgia, 'Times New Roman', Times, serif;
 
   animation-name: moveEffect;
-  animation-duration: 3s;
+  animation-duration: 2s;
   animation-timing-function: ease-in-out;
   animation-fill-mode: forwards;
 }
