--- a/styles/style.css
+++ b/styles/style.css
@@ -264,18 +264,19 @@ body {
 
 /* 메인 */
 .main{
-  background: lightgreen;
+  background: #fff;
   min-height: 450px;
-  padding: 0 30px;
+  padding: 30px 15px;
+  display: flow-root;
+  border-radius: 15px 15px 0 0;
+}
 
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: flex-start;
+.group {
+  margin: 0 15px;
+  float: left;
 }
 
 .group1 {
-  background-color: violet;
   width: 250px;
 }
 .group2 {
@@ -286,6 +287,85 @@ body {
   background-color: gold;
   width: 190px;
 }
+
+/* 로그인 */
+.login {
+  background: orange radial-gradient(circle at right top, orange, #e85e2c);
+  padding: 12px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 0 0 #ccc;
+}
+
+.login-title {
+  color: yellow;
+  font-size: 15px;
+  font-weight: bold;
+  text-indent: 0.8em;
+  margin-bottom: 10px;
+}
+
+.login-form {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px 5px 0 0;
+  position: relative;
+}
+
+.login-form::after {
+  display: block;
+  content: "";
+  width: calc(100%-20px);
+  height: 1px;
+  margin-top: 12px;
+  background-color: #bcbcbc;
+}
+
+.login-form legend {display: none;}
+
+.login-form label {
+  display: inline-block;
+  width: 50px;
+  margin-right: 3px;
+}
+
+.login-form input {
+  width: 80px;
+  font-size: 12px;
+}
+
+.login-form .user-email {margin-bottom: 5px;}
+
+.login-btn {
+  background-color: #e85e2c;
+  border: 0;
+  outline: 0;
+  border-radius: 5px;
+  width: 60px;
+  height: calc(100% - 32px);
+  color: white;
+  
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.sign {
+  background-color: white;
+  border-radius: 0 0 5px 5px;
+  padding: 0 10px 10px 10px;
+  font-size: 12px;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.sign li::before {
+  font-family: 'fontello';
+  content: '\e803';
+  color: #e85e2c;
+  margin-right: 5px;
+}
+
 
 /* 슬로건 */
 .slogan{
