--- a/styles/style.css
+++ b/styles/style.css
@@ -366,6 +366,45 @@ body {
   margin-right: 5px;
 }
 
+/* 유효성 검사 배너 */
+.validation-list {
+  margin-top: 25px;
+}
+
+.validation-list li {
+  background: #bcbcbc linear-gradient(to bottom, #d2d2d2, #f1f1f1);
+  border: 1px solid #959595;
+  border-radius: 30px;
+
+  width: 250px;
+  height: 40px;
+  margin-top: 10px;
+  overflow: hidden;
+
+  /* a 태그의 기준 */
+  position: relative;
+}
+
+.validation-list a {
+  width: 100%;
+  height: 100%;
+  padding-left: 30px;
+  border-radius: 30px;
+  line-height: 40px;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.validation-list a:hover, .validation-list a:focus {color: red;}
+
+.validation-list a::before {
+  display: inline-block;
+  content: url(./images/validation_icon.png);
+  transform: translateY(3px);
+  margin-right: 3px;
+}
 
 /* 슬로건 */
 .slogan{
