--- a/styles/style.css
+++ b/styles/style.css
@@ -861,6 +861,40 @@ legend {display: none;}
 }
 
 .footer-inner {
-  background-color: silver;
-  height: 15vh;
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 20px;
+  padding: 20px 0;
+}
+
+.footer-logo {
+  width: 150px;
+  padding: 20px 0 0 35px;
+}
+
+.footer-inner-wrapper {
+  flex: 1 1 auto;
+}
+
+.guide-list {
+  background-color: #7b8385;
+  border-radius: 30px;
+  color: #fff;
+  padding: 4px 45px;
+
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  text-transform: uppercase;
+}
+
+.guide-list a {
+  display: block;
+  padding: 6px 10px;
+}
+
+.address, .copyright {
+  display: block;
+  font-size: 1.3rem;
+  margin-top: 10px;
 }
